--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@
 unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
-
+set -g default-terminal "screen-256color"
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
@@ -128,14 +128,14 @@ set-option -g status-left "\
 
 set-option -g status-right "\
 #[fg=colour214, bg=colour237] \
-#[fg=colour237, bg=colour214] #(~/dotfiles/tmux_scripts/music.sh) \
-#[fg=colour223, bg=colour237] #(~/dotfiles/tmux_scripts/uptime.sh) \
+#[fg=colour237, bg=colour214] #(~/dotfiles/tmux/scripts/music.sh) \
+#[fg=colour223, bg=colour237] #(~/dotfiles/tmux/scripts/uptime.sh) \
 #[fg=colour246, bg=colour237]  %b %d '%y\
 #[fg=colour109]  %H:%M \
 #[fg=colour248, bg=colour239]"
 
 set-window-option -g window-status-current-format "\
-#[fg=colour237, bg=colour214]\
+#[fg=colour237 bg=colour214]\
 #[fg=colour239, bg=colour214] #I* \
 #[fg=colour239, bg=colour214, bold] #W \
 #[fg=colour214, bg=colour237]"
@@ -211,4 +211,4 @@ bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind-key -T copy-mode-vi 'C-\\' select-pane -l
