--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,11 +6,21 @@
 unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g mouse on
+bind -n WheelUpPane {
+    if -F '#{==:#{window_name},nvim}' {
+        send-keys -M
+    } {
+        copy-mode -e
+    }
+}
 # Use | and - to split a window vertically and horizontally instead of " and % respoectively
 unbind '"'
 unbind %
@@ -126,10 +136,10 @@ set-option -g status-left "\
 #[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],} ❐ #S \
 #[fg=colour241, bg=colour237]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, 🔍,}"
 
+# [fg=colour237, bg=colour214] #(~/dotfiles/tmux/scripts/music.sh) 
+# [fg=colour223, bg=colour237] #(~/dotfiles/tmux/scripts/uptime.sh)
 set-option -g status-right "\
 #[fg=colour214, bg=colour237] \
-#[fg=colour237, bg=colour214] #(~/dotfiles/tmux/scripts/music.sh) \
-#[fg=colour223, bg=colour237] #(~/dotfiles/tmux/scripts/uptime.sh) \
 #[fg=colour246, bg=colour237]  %b %d '%y\
 #[fg=colour109]  %H:%M \
 #[fg=colour248, bg=colour239]"
@@ -202,10 +212,10 @@ bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+# if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+#    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+# if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+#    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
